# ovarian_atlas_xenium_analysis

./: README.md  pyproject.toml
docker/: Dockerfile  Makefile
histology_features/: __init__.py  _logging.py  main.py
histology_features/annotation/: __init__.py  _combine.py  _download.py  _merge.py  _relate.py
histology_features/cli/: _search.py  _submit.py  app.py  concatenate.py  uv_submit.sh
histology_features/cli/config/: __init__.py  slurm.py
histology_features/embedding/: __init__.py  _embedding.py
histology_features/features/: array.py  batch_correction.py  classification.py  cluster.py  crop.py  extractors.py  feature_extraction.py  feature_matching.py  image.py  processors.py  read_10x_h5.py  transcripts.py
histology_features/io/: __init__.py  _concat.py  histology.py  image.py  omero_annotations.py
histology_features/metrics/: cluster.py
histology_features/ml/: __init__.py  _classifier.py  _preprocess.py
histology_features/normalisation/: normalisation.py
histology_features/polygons/: polygons.py
histology_features/reassignment/: __init__.py  _reassign.py
histology_features/registration/: __init__.py  _registration.py  _visualisation.py
histology_features/segmentation/: __init__.py  _isolation.py  detection.py
histology_features/spec/: __init__.py  _constants.py  xenium.py
histology_features/utility/: __init__.py  colormap.py  load_save_pickle.py  plot.py  umap.py  utils.py
tests/: test_embedding.py  test_feature_extraction.py  test_transcript_image_generation.py
tests/notebooks/: determining_map_block_tests.ipynb
(+5 files in other folders)
